# Client

./: .gitignore  Cargo.toml  Cross.toml  LICENSE.md  Makefile.toml  Manifest.xml  README.md  build.rs
.github/workflows/: build.yml
src/: api.rs  config.rs  constants.rs  hosts.rs  main.rs  models.rs  net.rs  patch.rs  servers.rs  update.rs
src/servers/: http.rs  main.rs  mod.rs  packet.rs  qos.rs  redirector.rs  telemetry.rs  tunnel.rs
src/ui/: iced.rs  mod.rs  native.rs
