[package]
name = "pocket-relay-client"
version = "0.2.8"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Client application for the Pocket Relay server"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["EA", "PocketRelay", "MassEffect"]

[build-dependencies]
winres = "0.1"

[features]
default = ["iced"]
iced = ["dep:iced"]
native = ["dep:native-windows-gui"]

[dependencies]
# Serialization and HTTP requests
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tdf = "0.1"
bytes = "1.4.0"

# Blaze SSLv3 async TCPStream implementation
blaze-ssl-async = "^0.3"

# Native file picker dialog
native-dialog = "0.6.3"

# Library for obtaining the local IP address of the device
local-ip-address = "0.5"

tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "1"
semver = "1.0.18"
hyper = { version = "0.14", features = ["server", "http1", "tcp", "runtime"] }
log = "0.4.20"
env_logger = "0.10.0"

# Iced GUI framework variant
[dependencies.iced]
version = "0.10"
default-features = false
features = ["image", "tokio"]
optional = true

# Native Windows GUI framework variant
[dependencies.native-windows-gui]
version = "1.0.13"
optional = true

# Tokio async runtime
[dependencies.tokio]
version = "1"
features = ["macros", "net", "parking_lot", "rt-multi-thread", "sync", "fs"]

[profile.release]
strip = true
lto = true
