[package]
name = "pocket-relay-client"
version = "0.2.8"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Client application for the Pocket Relay server"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["EA", "PocketRelay", "MassEffect"]

[build-dependencies]
winres = "0.1"

[features]
default = ["iced"]
iced = ["dep:iced"]
native = ["dep:native-windows-gui", "dep:native-windows-derive"]

[dependencies]
blaze-ssl-async = "^0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tdf = "0.1"
bytes = "1.4"

# Tokio async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Library for obtaining the local IP address of the device
local-ip-address = "0.5"

futures = "0.3"
thiserror = "1"
semver = { version = "1", features = ["serde"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp", "runtime"] }

log = "0.4"
env_logger = "0.10"

# Native file picker dialog
native-dialog = "0.6"
# Native Windows GUI framework variant
native-windows-gui = { version = "1", optional = true, features = ["notice"] }
native-windows-derive = { version = "1", optional = true }

tun = { version = "0.6.1", features = ["async"] }
pnet_packet = "0.34.0"

[dependencies.reqwest]
version = "0.11"
default_features = false
features = ["json", "native-tls"]

# Iced GUI framework variant
[dependencies.iced]
version = "0.10"
default-features = false
features = ["image", "tokio"]
optional = true

[profile.release]
strip = true
lto = true
codegen-units = 1
