[package]
name = "pocket-relay-client"
version = "0.3.2"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Client application for the Pocket Relay server"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["EA", "PocketRelay", "MassEffect"]

[build-dependencies]
winres = "0.1"

[features]
default = ["iced"]
iced = ["dep:iced", "dep:native-dialog"]
native = ["dep:native-windows-gui", "dep:native-windows-derive", "dep:futures"]

[dependencies]
# Shared backing library
pocket-relay-client-shared = { version = "0.1", path = "../pocket-relay-client-shared" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tokio async runtime
tokio = { version = "1", features = ["full"] }

thiserror = "1"

# Used by the native variant to get the future result
futures = { version = "0.3", optional = true }

log = "0.4"
env_logger = "0.10"

# Native dialogs when using the iced variant
native-dialog = { version = "0.7", optional = true }

# Native Windows GUI framework variant
native-windows-gui = { version = "1", optional = true, features = ["notice"] }
native-windows-derive = { version = "1", optional = true }

# Iced GUI framework variant
[dependencies.iced]
version = "0.10"
default-features = false
features = ["image", "tokio"]
optional = true

[profile.release]
strip = true
lto = true
codegen-units = 1
